优化黑色背景下的显示，增加了一些值

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -58,3 +58,8 @@
 
 .pre{white-space: pre-wrap}
 .tlf{table-layout: fixed;}
+
+.a{cursor: pointer;}
+.b{font-weight: bold;}
+.u{text-decoration: underline;}
+.i{font-style: italic;}
