--- a/css/layout.css
+++ b/css/layout.css
@@ -98,4 +98,12 @@
 
 .tlf { table-layout: fixed; }
 
+.a { cursor: pointer; }
+
+.b { font-weight: bold; }
+
+.u { text-decoration: underline; }
+
+.i { font-style: italic; }
+
 /*# sourceMappingURL=layout.css.map */
