--- a/css/values.css
+++ b/css/values.css
@@ -62,6 +62,26 @@
 
 .pl-1 { padding-left: 1px; }
 
+.m-2 { margin: 2px; }
+
+.mt-2 { margin-top: 2px; }
+
+.mr-2 { margin-right: 2px; }
+
+.mb-2 { margin-bottom: 2px; }
+
+.ml-2 { margin-left: 2px; }
+
+.p-2 { padding: 2px; }
+
+.pt-2 { padding-top: 2px; }
+
+.pr-2 { padding-right: 2px; }
+
+.pb-2 { padding-bottom: 2px; }
+
+.pl-2 { padding-left: 2px; }
+
 .m-3 { margin: 3px; }
 
 .mt-3 { margin-top: 3px; }
@@ -81,6 +101,26 @@
 .pb-3 { padding-bottom: 3px; }
 
 .pl-3 { padding-left: 3px; }
+
+.m-4 { margin: 4px; }
+
+.mt-4 { margin-top: 4px; }
+
+.mr-4 { margin-right: 4px; }
+
+.mb-4 { margin-bottom: 4px; }
+
+.ml-4 { margin-left: 4px; }
+
+.p-4 { padding: 4px; }
+
+.pt-4 { padding-top: 4px; }
+
+.pr-4 { padding-right: 4px; }
+
+.pb-4 { padding-bottom: 4px; }
+
+.pl-4 { padding-left: 4px; }
 
 .m-5 { margin: 5px; }
 
@@ -304,8 +344,6 @@
 
 .o-10 { opacity: 1; }
 
-.c-0 { color: RGBA(0, 0, 0, 0); }
-
 .c-1 { color: RGBA(0, 0, 0, 0.1); }
 
 .c-2 { color: RGBA(0, 0, 0, 0.2); }
@@ -326,51 +364,47 @@
 
 .c-10 { color: RGBA(0, 0, 0, 1); }
 
-.dk .c-0 { color: RGBA(255, 255, 255, 0); }
-.dk .c-1 { color: RGBA(255, 255, 255, 0.1); }
-.dk .c-2 { color: RGBA(255, 255, 255, 0.2); }
-.dk .c-3 { color: RGBA(255, 255, 255, 0.3); }
-.dk .c-4 { color: RGBA(255, 255, 255, 0.4); }
-.dk .c-5 { color: RGBA(255, 255, 255, 0.5); }
-.dk .c-6 { color: RGBA(255, 255, 255, 0.6); }
-.dk .c-7 { color: RGBA(255, 255, 255, 0.7); }
-.dk .c-8 { color: RGBA(255, 255, 255, 0.8); }
-.dk .c-9 { color: RGBA(255, 255, 255, 0.9); }
-.dk .c-10 { color: RGBA(255, 255, 255, 1); }
+.dk.c-1, .dk .c-1 { color: RGBA(255, 255, 255, 0.1); }
+.dk.c-2, .dk .c-2 { color: RGBA(255, 255, 255, 0.2); }
+.dk.c-3, .dk .c-3 { color: RGBA(255, 255, 255, 0.3); }
+.dk.c-4, .dk .c-4 { color: RGBA(255, 255, 255, 0.4); }
+.dk.c-5, .dk .c-5 { color: RGBA(255, 255, 255, 0.5); }
+.dk.c-6, .dk .c-6 { color: RGBA(255, 255, 255, 0.6); }
+.dk.c-7, .dk .c-7 { color: RGBA(255, 255, 255, 0.7); }
+.dk.c-8, .dk .c-8 { color: RGBA(255, 255, 255, 0.8); }
+.dk.c-9, .dk .c-9 { color: RGBA(255, 255, 255, 0.9); }
+.dk.c-10, .dk .c-10 { color: RGBA(255, 255, 255, 1); }
 
-.bg-0 { background-color: RGBA(0, 0, 0, 0); }
+.bg-1 { background-color: RGBA(0, 0, 0, 0.0333333333); }
 
-.bg-1 { background-color: RGBA(0, 0, 0, 0.1); }
+.bg-2 { background-color: RGBA(0, 0, 0, 0.0666666667); }
 
-.bg-2 { background-color: RGBA(0, 0, 0, 0.2); }
+.bg-3 { background-color: RGBA(0, 0, 0, 0.1); }
 
-.bg-3 { background-color: RGBA(0, 0, 0, 0.3); }
+.bg-4 { background-color: RGBA(0, 0, 0, 0.1333333333); }
 
-.bg-4 { background-color: RGBA(0, 0, 0, 0.4); }
+.bg-5 { background-color: RGBA(0, 0, 0, 0.1666666667); }
 
-.bg-5 { background-color: RGBA(0, 0, 0, 0.5); }
+.bg-6 { background-color: RGBA(0, 0, 0, 0.2); }
 
-.bg-6 { background-color: RGBA(0, 0, 0, 0.6); }
+.bg-7 { background-color: RGBA(0, 0, 0, 0.2333333333); }
 
-.bg-7 { background-color: RGBA(0, 0, 0, 0.7); }
+.bg-8 { background-color: RGBA(0, 0, 0, 0.2666666667); }
 
-.bg-8 { background-color: RGBA(0, 0, 0, 0.8); }
+.bg-9 { background-color: RGBA(0, 0, 0, 0.3); }
 
-.bg-9 { background-color: RGBA(0, 0, 0, 0.9); }
+.bg-10 { background-color: RGBA(0, 0, 0, 0.3333333333); }
 
-.bg-10 { background-color: RGBA(0, 0, 0, 1); }
-
-.dk .bg-0 { background-color: RGBA(255, 255, 255, 0); }
-.dk .bg-1 { background-color: RGBA(255, 255, 255, 0.1); }
-.dk .bg-2 { background-color: RGBA(255, 255, 255, 0.2); }
-.dk .bg-3 { background-color: RGBA(255, 255, 255, 0.3); }
-.dk .bg-4 { background-color: RGBA(255, 255, 255, 0.4); }
-.dk .bg-5 { background-color: RGBA(255, 255, 255, 0.5); }
-.dk .bg-6 { background-color: RGBA(255, 255, 255, 0.6); }
-.dk .bg-7 { background-color: RGBA(255, 255, 255, 0.7); }
-.dk .bg-8 { background-color: RGBA(255, 255, 255, 0.8); }
-.dk .bg-9 { background-color: RGBA(255, 255, 255, 0.9); }
-.dk .bg-10 { background-color: RGBA(255, 255, 255, 1); }
+.dk.bg-1, .dk .bg-1 { background-color: RGBA(255, 255, 255, 0.0333333333); }
+.dk.bg-2, .dk .bg-2 { background-color: RGBA(255, 255, 255, 0.0666666667); }
+.dk.bg-3, .dk .bg-3 { background-color: RGBA(255, 255, 255, 0.1); }
+.dk.bg-4, .dk .bg-4 { background-color: RGBA(255, 255, 255, 0.1333333333); }
+.dk.bg-5, .dk .bg-5 { background-color: RGBA(255, 255, 255, 0.1666666667); }
+.dk.bg-6, .dk .bg-6 { background-color: RGBA(255, 255, 255, 0.2); }
+.dk.bg-7, .dk .bg-7 { background-color: RGBA(255, 255, 255, 0.2333333333); }
+.dk.bg-8, .dk .bg-8 { background-color: RGBA(255, 255, 255, 0.2666666667); }
+.dk.bg-9, .dk .bg-9 { background-color: RGBA(255, 255, 255, 0.3); }
+.dk.bg-10, .dk .bg-10 { background-color: RGBA(255, 255, 255, 0.3333333333); }
 
 .bd, .bt, .br, .bb, .bl { border-style: solid; border-width: 0; }
 
@@ -384,8 +418,6 @@
 
 .bl { border-top-width: 1px; }
 
-.bc-0 { border-color: RGBA(0, 0, 0, 0); }
-
 .bc-1 { border-color: RGBA(0, 0, 0, 0.1); }
 
 .bc-2 { border-color: RGBA(0, 0, 0, 0.2); }
@@ -396,12 +428,26 @@
 
 .bc-5 { border-color: RGBA(0, 0, 0, 0.5); }
 
-.dk .bc-0 { border-color: RGBA(255, 255, 255, 0); }
-.dk .bc-1 { border-color: RGBA(255, 255, 255, 0.1); }
-.dk .bc-2 { border-color: RGBA(255, 255, 255, 0.2); }
-.dk .bc-3 { border-color: RGBA(255, 255, 255, 0.3); }
-.dk .bc-4 { border-color: RGBA(255, 255, 255, 0.4); }
-.dk .bc-5 { border-color: RGBA(255, 255, 255, 0.5); }
+.bc-6 { border-color: RGBA(0, 0, 0, 0.6); }
+
+.bc-7 { border-color: RGBA(0, 0, 0, 0.7); }
+
+.bc-8 { border-color: RGBA(0, 0, 0, 0.8); }
+
+.bc-9 { border-color: RGBA(0, 0, 0, 0.9); }
+
+.bc-10 { border-color: RGBA(0, 0, 0, 1); }
+
+.dk.bc-1, .dk .bc-1 { border-color: RGBA(255, 255, 255, 0.1); }
+.dk.bc-2, .dk .bc-2 { border-color: RGBA(255, 255, 255, 0.2); }
+.dk.bc-3, .dk .bc-3 { border-color: RGBA(255, 255, 255, 0.3); }
+.dk.bc-4, .dk .bc-4 { border-color: RGBA(255, 255, 255, 0.4); }
+.dk.bc-5, .dk .bc-5 { border-color: RGBA(255, 255, 255, 0.5); }
+.dk.bc-6, .dk .bc-6 { border-color: RGBA(255, 255, 255, 0.6); }
+.dk.bc-7, .dk .bc-7 { border-color: RGBA(255, 255, 255, 0.7); }
+.dk.bc-8, .dk .bc-8 { border-color: RGBA(255, 255, 255, 0.8); }
+.dk.bc-9, .dk .bc-9 { border-color: RGBA(255, 255, 255, 0.9); }
+.dk.bc-10, .dk .bc-10 { border-color: RGBA(255, 255, 255, 1); }
 
 .r-2 { border-radius: 2px; }
 
@@ -414,5 +460,52 @@
 .r-10 { border-radius: 10px; }
 
 .r-12 { border-radius: 12px; }
+
+.z-0 { z-index: 0; }
+
+.z-1 { z-index: 1; }
+
+.z-2 { z-index: 2; }
+
+.z-3 { z-index: 3; }
+
+.z-4 { z-index: 4; }
+
+.z-5 { z-index: 5; }
+
+.z-6 { z-index: 6; }
+
+.z-7 { z-index: 7; }
+
+.z-8 { z-index: 8; }
+
+.z-9 { z-index: 9; }
+
+.z-10 { z-index: 10; }
+
+.hv-1:hover { background-color: RGBA(0, 0, 0, 0.05); }
+
+.hv-2:hover { background-color: RGBA(0, 0, 0, 0.1); }
+
+.hv-3:hover { background-color: RGBA(0, 0, 0, 0.15); }
+
+.hv-4:hover { background-color: RGBA(0, 0, 0, 0.2); }
+
+.dk.hv-1:hover, .dk .hv-1:hover { background-color: RGBA(255, 255, 255, 0.05); }
+.dk.hv-2:hover, .dk .hv-2:hover { background-color: RGBA(255, 255, 255, 0.1); }
+.dk.hv-3:hover, .dk .hv-3:hover { background-color: RGBA(255, 255, 255, 0.15); }
+.dk.hv-4:hover, .dk .hv-4:hover { background-color: RGBA(255, 255, 255, 0.2); }
+
+.ts { transition: all .3s; }
+
+.ts-1 { transition: all 0.1s; }
+
+.ts-2 { transition: all 0.2s; }
+
+.ts-3 { transition: all 0.3s; }
+
+.ts-4 { transition: all 0.4s; }
+
+.ts-5 { transition: all 0.5s; }
 
 /*# sourceMappingURL=values.css.map */
