--- a/scss/values.scss
+++ b/scss/values.scss
@@ -9,7 +9,7 @@ $lh-nums: 10, 12, 14, 16, 18, 20, 22, 24;
 }
 
 // Margin, Padding
-$mp-nums: 1, 3, 5, 7, 10, 15, 20, 25, 30, 40, 50, 0;
+$mp-nums: 1, 2, 3, 4, 5, 7, 10, 15, 20, 25, 30, 40, 50, 0;
 @each $num in $mp-nums {
   .m-#{$num}{margin: #{$num}px}
   .mt-#{$num}{margin-top: #{$num}px}
@@ -32,21 +32,21 @@ $o-nums: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 }
 
 // Color 这里去掉了一些不太可能使用的颜色
-@for $i from 0 through 10 {
+@for $i from 1 through 10 {
   .c-#{$i}{color: RGBA(0, 0, 0, #{$i / 10})}
 }
 .dk{
-  @for $i from 0 through 10 {
-    .c-#{$i}{color: RGBA(255, 255, 255, #{$i / 10})}
+  @for $i from 1 through 10 {
+    &.c-#{$i}, .c-#{$i}{color: RGBA(255, 255, 255, #{$i / 10})}
   }
 }
 
-@for $i from 0 through 10 {
-  .bg-#{$i}{background-color: RGBA(0, 0, 0, #{$i / 10})}
+@for $i from 1 through 10 {
+  .bg-#{$i}{background-color: RGBA(0, 0, 0, #{$i / 30})}
 }
 .dk{
-  @for $i from 0 through 10 {
-    .bg-#{$i}{background-color: RGBA(255, 255, 255, #{$i / 10})}
+  @for $i from 1 through 10 {
+    &.bg-#{$i}, .bg-#{$i}{background-color: RGBA(255, 255, 255, #{$i / 30})}
   }
 }
 
@@ -58,12 +58,12 @@ $o-nums: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 .bb{border-top-width: 1px;}
 .bl{border-top-width: 1px;}
 
-@for $i from 0 through 5 {
+@for $i from 1 through 10 {
   .bc-#{$i}{border-color: RGBA(0, 0, 0, #{$i / 10});}
 }
 .dk{
-  @for $i from 0 through 5 {
-    .bc-#{$i}{border-color: RGBA(255, 255, 255, #{$i / 10});}
+  @for $i from 1 through 10 {
+    &.bc-#{$i}, .bc-#{$i}{border-color: RGBA(255, 255, 255, #{$i / 10});}
   }
 }
 
@@ -71,4 +71,26 @@ $o-nums: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 $r-nums: 2, 4, 6, 8, 10, 12;
 @each $r in $r-nums {
   .r-#{$r}{border-radius: #{$r}px}
+}
+
+// Z-index
+$z-nums: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
+@each $z in $z-nums {
+  .z-#{$z}{z-index: #{$z}}
+}
+
+// hover
+@for $i from 1 through 4 {
+  .hv-#{$i}:hover{background-color: RGBA(0, 0, 0, #{$i / 20});}
+}
+.dk{
+  @for $i from 1 through 4 {
+    &.hv-#{$i}:hover, .hv-#{$i}:hover{background-color: RGBA(255, 255, 255, #{$i / 20});}
+  }
+}
+
+// transition
+.ts{transition: all .3s;}
+@for $i from 1 through 5 {
+  .ts-#{$i}{transition: all #{$i / 10}s;}
 }
