--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -1,4 +1,6 @@
 .dg{display: grid;}
+.gfr{grid-auto-flow: row;}
+.gfc{grid-auto-flow: column;}
 
 @for $i from 1 through 12 {
   .gr-#{$i}{grid-template-rows: repeat(#{$i}, 1fr);}
@@ -8,7 +10,7 @@
   .grs-#{$i}{grid-row: span #{$i};}
   .gcs-#{$i}{grid-column: span #{$i};}
 }
-$nums: 2, 3, 5, 7, 10, 15, 20, 25, 30, 40;
+$nums: 1, 2, 3, 4, 5, 7, 10, 15, 20, 25, 30, 40, 50;
 @each $num in $nums {
   .gg-#{$num}{grid-gap: #{$num}px}
 }
