--- a/scss/values.scss
+++ b/scss/values.scss
@@ -1,4 +1,4 @@
-// FontSize
+// font-size
 $fs-nums: 12, 13, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 36, 40;
 @each $num in $fs-nums {
   .fs-#{$num}{font-size: #{$num}px}
@@ -8,7 +8,7 @@ $lh-nums: 10, 12, 14, 16, 18, 20, 22, 24;
   .lh-#{$num}{line-height: #{$num / 10}em;}
 }
 
-// Margin, Padding
+// margin, padding
 $mp-nums: 1, 2, 3, 4, 5, 7, 10, 15, 20, 25, 30, 40, 50, 0;
 @each $num in $mp-nums {
   .m-#{$num}{margin: #{$num}px}
@@ -24,14 +24,14 @@ $mp-nums: 1, 2, 3, 4, 5, 7, 10, 15, 20, 25, 30, 40, 50, 0;
   .pl-#{$num}{padding-left: #{$num}px}
 }
 
-// Opacity
+// opacity
 $o-nums: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 .o-05{opacity: 0.05;}
 @each $num in $o-nums{
   .o-#{$num}{opacity: #{$num / 10};}
 }
 
-// Color 这里去掉了一些不太可能使用的颜色
+// color
 @for $i from 1 through 10 {
   .c-#{$i}{color: RGBA(0, 0, 0, #{$i / 10})}
 }
@@ -50,7 +50,7 @@ $o-nums: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
   }
 }
 
-// Border
+// border
 .bd, .bt, .br, .bb, .bl{border-style: solid;border-width: 0;}
 .bd{border-width: 1px;}
 .bt{border-top-width: 1px;}
@@ -67,13 +67,13 @@ $o-nums: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
   }
 }
 
-// Border radius
+// border-radius
 $r-nums: 2, 4, 6, 8, 10, 12;
 @each $r in $r-nums {
   .r-#{$r}{border-radius: #{$r}px}
 }
 
-// Z-index
+// z-index
 $z-nums: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 @each $z in $z-nums {
   .z-#{$z}{z-index: #{$z}}
@@ -89,8 +89,3 @@ $z-nums: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
   }
 }
 
-// transition
-.ts{transition: all .3s;}
-@for $i from 1 through 5 {
-  .ts-#{$i}{transition: all #{$i / 10}s;}
-}
