--- a/css/init.css
+++ b/css/init.css
@@ -4,9 +4,13 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxyge
 
 div { box-sizing: border-box; }
 
-ul, li { list-style-type: none; }
+ul, ol, li { list-style-type: none; }
 
-input, button, textarea, select, a { margin: 0; padding: 0; border: none; color: inherit; font-size: inherit; outline: none; background-color: transparent; font-family: inherit; box-sizing: border-box; }
+a { color: inherit; text-decoration: none; }
+
+input, button, textarea, select, button { margin: 0; padding: 0; border-width: 1px; border-color: transparent; color: inherit; font-size: inherit; outline: none; background-color: transparent; font-family: inherit; box-sizing: border-box; }
+
+::placeholder { color: inherit; opacity: 0.6; }
 
 img, svg { vertical-align: middle; }
 
