--- a/scss/init.scss
+++ b/scss/init.scss
@@ -7,14 +7,21 @@ body{
 div{
   box-sizing: border-box;
 }
-ul, li{
+ul, ol, li{
   list-style-type: none;
 }
-input, button, textarea, select, a{
-  margin: 0;padding: 0;border: none;
-  color: inherit;font-size: inherit;
-  outline: none;background-color: transparent;
+a {
+  color: inherit;text-decoration: none;
+}
+input, button, textarea, select, button{
+  margin: 0;padding: 0;border-width: 1px;
+  border-color: transparent;color: inherit;
+  font-size: inherit;outline: none;
+  background-color: transparent;
   font-family: inherit;box-sizing: border-box;
+}
+::placeholder{
+  color: inherit;opacity: 0.6;
 }
 img, svg{
   vertical-align: middle;
