--- a/scss/values.scss
+++ b/scss/values.scss
@@ -37,7 +37,7 @@ $o-nums: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 }
 .dk{
   @for $i from 1 through 10 {
-    &.c-#{$i}, .c-#{$i}{color: RGBA(255, 255, 255, #{$i / 10})}
+    &.c-#{$i}, .c-#{$i}, .c-#{$i} &{color: RGBA(255, 255, 255, #{$i / 10})}
   }
 }
 
