增加了点击行为的背景色

--- a/css/layout.css
+++ b/css/layout.css
@@ -94,6 +94,8 @@
 
 .pea { pointer-events: auto; }
 
+.usn { user-select: none; }
+
 .pre { white-space: pre-wrap; }
 
 .tlf { table-layout: fixed; }
