--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -51,6 +51,7 @@
 .toe{text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
 .pen{pointer-events: none;}
 .pea{pointer-events: auto;}
+.usn{user-select: none;}
 
 .pre{white-space: pre-wrap}
 .tlf{table-layout: fixed;}
