--- a/scss/values.scss
+++ b/scss/values.scss
@@ -88,4 +88,12 @@ $z-nums: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
     &.hv-#{$i}:hover, .hv-#{$i}:hover{background-color: RGBA(255, 255, 255, #{$i / 20});}
   }
 }
-
+// active
+@for $i from 1 through 4 {
+  .at-#{$i}:active{background-color: RGBA(0, 0, 0, #{$i / 20 + 0.05});}
+}
+.dk{
+  @for $i from 1 through 4 {
+    &.at-#{$i}:active, .at-#{$i}:active{background-color: RGBA(255, 255, 255, #{$i / 20 + 0.05});}
+  }
+}
