--- a/scss/init.scss
+++ b/scss/init.scss
@@ -1,18 +1,14 @@
 html, body, h1, h2, h3, h4, h5, h6, p, ul, li, dl, dt, dd, ol{
   margin: 0;padding: 0;box-sizing: border-box;font-weight: normal;
 }
-body{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-div{
-  box-sizing: border-box;
-}
-ul, ol, li{
-  list-style-type: none;
-}
-a {
-  color: inherit;text-decoration: none;
-}
+body{font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+
+div{box-sizing: border-box;}
+
+ul, ol, li{list-style-type: none;}
+
+a {color: inherit;text-decoration: none;}
+
 input, button, textarea, select, button{
   margin: 0;padding: 0;border-width: 1px;
   border-color: transparent;color: inherit;
@@ -20,12 +16,9 @@ input, button, textarea, select, button{
   background-color: transparent;
   font-family: inherit;box-sizing: border-box;
 }
-::placeholder{
-  color: inherit;opacity: 0.6;
-}
-img, svg{
-  vertical-align: middle;
-}
-th, td{
-  text-align: left;
-}
+
+::placeholder{color: inherit;opacity: 0.6;}
+
+img, svg{vertical-align: middle;}
+
+th, td{text-align: left;}
