--- a/css/init.css
+++ b/css/init.css
@@ -4,7 +4,7 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxyge
 
 div { box-sizing: border-box; }
 
-ul, ol, li { list-style-type: none; }
+ul, ol { list-style-type: none; }
 
 a { color: inherit; text-decoration: none; }
 
@@ -13,6 +13,8 @@ input, button, textarea, select, button { margin: 0; padding: 0; border-width: 1
 ::placeholder { color: inherit; opacity: 0.6; }
 
 img, svg { vertical-align: middle; }
+
+table { border-collapse: collapse; border-spacing: 0; }
 
 th, td { text-align: left; }
 
