--- a/scss/init.scss
+++ b/scss/init.scss
@@ -5,7 +5,7 @@ body{font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
 
 div{box-sizing: border-box;}
 
-ul, ol, li{list-style-type: none;}
+ul, ol{list-style-type: none;}
 
 a {color: inherit;text-decoration: none;}
 
@@ -20,5 +20,7 @@ input, button, textarea, select, button{
 ::placeholder{color: inherit;opacity: 0.6;}
 
 img, svg{vertical-align: middle;}
+
+table{border-collapse: collapse;border-spacing: 0;}
 
 th, td{text-align: left;}
