--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,3 +5,8 @@
 @import 'margin-padding.scss';
 @import 'border.scss';
 @import 'color.scss';
+@import 'box-shadow.scss';
+@import 'other.scss';
+
+@import 'interactive.scss';
+@import 'media-query.scss';
