--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -1,18 +1,19 @@
+@import './variable';
+
 .gfr{display: grid;grid-auto-flow: row;}
 .gfc{display: grid;grid-auto-flow: column;}
 
-@for $i from 1 through 12 {
-  .gr-#{$i}{grid-template-rows: repeat(#{$i}, 1fr);}
-  .gc-#{$i}{grid-template-columns: repeat(#{$i}, 1fr);}
+@for $n from 1 through $grid {
+  .gr-#{$n}{grid-template-rows: repeat(#{$n}, 1fr);}
+  .gc-#{$n}{grid-template-columns: repeat(#{$n}, 1fr);}
 
-  .rs-#{$i}{grid-row: span #{$i};}
-  .cs-#{$i}{grid-column: span #{$i};}
+  .rs-#{$n}{grid-row: span #{$n};}
+  .cs-#{$n}{grid-column: span #{$n};}
 
-  .gcs-#{$i}{grid-column-start: $i;}
-  .grs-#{$i}{grid-row-start: $i;}
+  .gcs-#{$n}{grid-column-start: $n;}
+  .grs-#{$n}{grid-row-start: $n;}
 }
 
-$nums: 1, 2, 3, 4, 5, 7, 10, 15, 20, 25, 30, 40, 50;
-@each $num in $nums {
-  .gg-#{$num}{grid-gap: #{$num}px}
+@each $n in $grid-gap {
+  .gg-#{$n}{grid-gap: #{$n}px}
 }
