--- a/scss/init.scss
+++ b/scss/init.scss
@@ -4,6 +4,7 @@ html, body, h1, h2, h3, h4, h5, h6, p, ul, li, dl, dt, dd, ol{
 body{font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 
 div{box-sizing: border-box;}
+*[tabindex]{outline: none;}
 
 ul, ol{list-style-type: none;}
 
