--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,4 +1,7 @@
+@import './variable';
+
 .db{display: block;}
+.dn{display: none;}
 .di{display: inline;}
 .dib{display: inline-block;}
 .df{display: flex;}
@@ -13,7 +16,7 @@
 .fc{display: flex;flex-direction: column;}
 .fw{flex-wrap: wrap;}
 
-@for $i from 1 through 10 {
+@for $i from 1 through $flex {
   .f-#{$i}{flex: #{$i};}
 }
 
@@ -24,7 +27,7 @@
 .js{justify-content: flex-start;}
 .jc{justify-content: center;}
 .je{justify-content: flex-end;}
-.ct{display: flex;align-items: center;justify-content: center;}
+.ct{display: flex;align-items: center;justify-content: center;} // center
 
 .tl{text-align: left;}
 .tc{text-align: center;}
@@ -39,7 +42,7 @@
 
 .wf{width: 100%;}
 .hf{height: 100%;}
-.full{width: 100%;height: 100%;left: 0;top: 0;}
+.fu{width: 100%;height: 100%;left: 0;top: 0;} // full
 
 .ma{margin: 0 auto;}
 
